Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -566,7 +566,7 @@
  DISPUTED_SUCC_ALERT_TXT:0 "$COL$$NAME$§!（$AGE$歳）－威信：§R$PRESTIGE$§!"
  LEDGER_HR_RULERS:0 "現在の統治者"
  GOLD_DEPLETE_TOO_LOW:0 "$LEVEL|Y$以下の基本生産であれば、この金鉱山が枯渇する危険はありません。"
- GOLD_DEPLETE_WARNING:1 "§Rこの州の§Y$PROD$§!の生産量の増加により§!§R、鉱山が枯渇し、生産量が半減する可能性が§!§Y$CHANCE$%§!§Rあります。§!\n\n"
+ GOLD_DEPLETE_WARNING:1 "§Rこの州の金生産量が§!§Y$PROD$§!§Rに増加することで、鉱山が枯渇し、生産量が半減する可能性が§!§Y$CHANCE$%§!§Rあります。§!\n\n"
  GOLD_DEPLETE_CHANCE:0 "$PROD|Y$の基本生産では、鉱山が枯渇し、生産量が半減する可能性が§R$CHANCE$%§!あります。"
  YEARLY_INC_TXT:0 "（年間 $VAL|Y$¤）"
  LEDGER_TOTAL_DEVELOPMENT:0 "開発度"
@@ -798,7 +798,7 @@
  IMPPR_NOTCORE:0 "$NAME$はまだ中核州ではないので、$ACTION|Y$することはできません。"
  IMPPR_NOTCORE_SUBJECT:0 "$NAME$は我々の従属国の中核州の一つではないので、まだそこでは$ACTION|Y$することはできません。"
  IMPPR_NOT_ENOUGH_POWER:0 "§R$NAME$での$ACTION$に必要な$POWER|Y$の$TYPE$点を持っていません。§!"
- IMPPR_DO:1 "$NAME$で$TYPE$力$COST|Y$を払って§G+$AMOUNT$§!だけ$ACTION$を行うと、以下の効果が得られます：\n$EFFECT$\n  直轄地：$CROWNLAND|+=&1$"
+ IMPPR_DO:1 "$NAME$で$TYPE$力$COST|Y$を払って$ACTION$を§G+$AMOUNT$§!すると、以下の効果が得られます：\n$EFFECT$\n  直轄地：$CROWNLAND|+=&1$"
  IMPROVED_COUNT_TRIGGER_LESS:1 "開発回数が$VAL|Y$回未満\n"
  IMPROVED_COUNT_TRIGGER_AT_LEAST:1 "開発回数が$VAL|Y$回以上\n"
  IMP_PROV_COST:0 "§Y$PROV$§!の改善に$VAL|Y$の統治、外交または軍事の君主力コストがかかります。§Y$PROV$§!は$COUNT|Y$回の改善が行われています。"
@@ -1070,7 +1070,7 @@
  SIEGE_STATUS_EFFECT:0 "これは包囲ステータスに§Y+$VAL$§!の影響を与えました。"
  MANU_ONLY_IN_FOR_BONUS:0 "§Y$NAME$§!の州に建設することができます。"
  LEDGER_LIMIT:0 "扶養限界"
- COLO_BONUS_AT_CITY2:0 "植民地が都市になったとき、残っている原住民が次の効果を提供します。\n$EFFECT$"
+ COLO_BONUS_AT_CITY2:0 "植民地が都市になったとき、残っている原住民が以下の効果を提供します：\n$EFFECT$"
  END_OF_REVOLUTION:1 "革命の終わりまで"
  END_OF_PEASANTS_WAR:1 "農民戦争の終わりまで"
  END_OF_INTERNAL_CONFLICTS:1 "内紛の終わりまで"
@@ -1115,7 +1115,7 @@
  HRE_NUM_PRINCES_IMPACT:0 "帝国の正統性を維持するために必要な構成国数§Y$NEED$§!に対して現在§Y$CURR$§!です。これは帝国の権威を毎月$VAL$変化させます。"
  LACK_OF_ELECTORS:0 "現在、帝国の選帝候数が§Y$CURR$§!のみであり、適切に機能するためには§Y$NEED$§!必要です。このため帝国の権威は毎月§R$VAL$§!減少します。"
  VASSALIZED_ELECTORS:0 "帝国内の§Y$CURR$§!の選帝候が従属国になっています。このため帝国の権威は毎月§R$VAL$§!減少します。"
- ENACT_DECREE_ONLY_ONE:0 "勅令は一度だけ制定することができ、それらは終了日前にキャンセルすることはできません。\n"
+ ENACT_DECREE_ONLY_ONE:0 "勅令は一度だけ制定することができ、それらは終了日前に取り消すことはできません。\n"
  ENACT_DECREE_NOT_EMPEROR:0 "皇帝のみが勅令を制定できます。"
  ENACT_DECREE_ALREADY_ENACTED:0 "$DECREENAME$がすでに制定されています。それは$DATE|Y$に実行されます。"
  ENACT_DECREE_NOT_ENOUGH_MERITOCRACY:0 "この勅令の制定には$MERITOCRACYREQUIRED$の能力主義を必要とし、あなたは現在、$CURRENTMERITOCRACY$だけ持っています。"
@@ -1560,10 +1560,10 @@
  KARMA_DECREASE_FOR_COUNTRY:0 "これには$COUNTRY$に§Y$VAL$§!のカルマが必要です。"
  patriarch_authority_local:0 "総主教の権威"
  patriarch_authority_global:0 "総主教の権威"
- COMBAT_IN_FRONTLINE:1 "第一列§Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
- COMBAT_IN_SECONDLINE:1 "第二列§Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
- COMBAT_IN_RESERVES:1 "予備§Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
- COMBAT_IN_RETREAT:1 "後退済§Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
+ COMBAT_IN_FRONTLINE:1 "第一列 §Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
+ COMBAT_IN_SECONDLINE:1 "第二列 §Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
+ COMBAT_IN_RESERVES:1 "予備 §Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
+ COMBAT_IN_RETREAT:1 "後退済 §Y$STRENGTH$§W人（士気：§Y$MORALE$§W）\n"
  NO_UNITS_THIS_TYPE:0 "このタイプのユニットはありません\n"
  ENVOY_DESC:0 "$NAME$（$TYPE$）：$STATUS$"
  ENVOY_IN_DESC:0 "§Y$PROV$§Yで"
@@ -2431,7 +2431,7 @@
  DIPLO_OUR:0 "我々の"
  SELECT_TRADENODE_PATROL:0 "交易の保護"
  SELECT_TRADENODE_PATROL_DESC:0 "交易を保護する艦隊は、艦隊が含む小型船に基づいて、選択された交易ノードに交易力を与えます。"
- CANCEL_TRADENODE_PATROL:0 "交易の保護をキャンセル"
+ CANCEL_TRADENODE_PATROL:0 "交易の保護を解除"
  SHOW_DIPLOMATIC_ACTIONS:0 "外交行動を表示"
  SHOW_DIPLOMATIC_FEEDBACK:0 "外交フィードバックを表示"
  SHOW_OPINIONS:0 "$WHO|Y$の評価を表示"
@@ -3160,11 +3160,11 @@
  DISCIPLINE_VALUE_NEW:0 "$COUNTRY$軍の規律は$VALUE$です。"
  SELECT_ADVISOR:0 "顧問を選択"
  CANCEL_COLONIST:0 "植民者を召還"
- CANCEL_COLONIST_DESC:0 "州があなたの領土に適切に統合される前に植民者を呼び戻しても、あなたの植民地はキャンセルされませんが、原住民の蜂起を引き起こす可能性があります。"
+ CANCEL_COLONIST_DESC:0 "州が自領に適切に統合される前に植民者を呼び戻しても、植民地が中断されることはありませんが、原住民の蜂起を引き起こす可能性があります。"
  COLONY_NATIVE_CULTURE:0 "この州の原住民は$CULTURE|Y$（$CULTUREGROUP|Y$）の文化を持っています。"
  COLONIST_ARRIVAL_DATE:0 "植民者は§Y$DAYS$§W日で到着するでしょう。"
- COLONIST_WORKING:0 "植民地を建設する。"
- COLONYCHANCE:0 "あなたの植民者は、毎月、入植者の人口を増加させる可能性が$CHANCE$%あります。"
+ COLONIST_WORKING:0 "植民地を建設しています。"
+ COLONYCHANCE:0 "植民者により入植者の人口を増加する可能性が毎月$CHANCE$%あります。"
  COLONYCOST:0 "植民者の派遣には$COST$のコストがかかります。"
  CHOOSE_MISSION:0 "ミッションを選択"
  CV_MISSION_SUCCEED:0 "以下の基準が満たされると、ミッションは成功します。"
@@ -3498,7 +3498,7 @@
  MACRO_REQUIREMENT_NOT_FULFILLED:0 "この州では$BUILDING$の条件が満たされていません。"
  MACRO_QUEUE:0 "$VAL|Y$ユニットを編成中："
  MACRO_CANCEL:0 "中止します。"
- MACRO_CANT_CANCEL_BECAUSE_OTHERS:0 "それはあなたの建設ではないため、キャンセルすることはできません。"
+ MACRO_CANT_CANCEL_BECAUSE_OTHERS:0 "あなたの建設ではないため、中止することはできません。"
  MACRO_SPECIAL_BUILDING:0 "特殊建造物（カテゴリー：$CAT$）"
  MACRO_UNIQUE_BUILDING_DESC:0 "この建物は1つしか建築できません"
  MACRO_SPECIAL_BUILDING_DESC:0 "州は一つのカテゴリの特殊建造物のみ持つことができます。"
@@ -4166,9 +4166,9 @@
  random_event.EVTOPTA21:0 "異端だ！司祭と彼の本を燃やしてしまえ！"
  random_event.EVTOPTB21:0 "素晴らしい知らせだ！これらの聖書をより広い範囲に広めよう。"
  random_event.EVTNAME22:0 "[Root.GetName]流刑地の設立"
- random_event.EVTDESC22:0 "[Root.GetName]の我々の植民地は、望んでいたほどの進展を見せていない。我々の顧問の1人がこの成長を加速する計画を考え出している。泥棒、債務者、その他の犯罪者たちを[Root.GetName]に送り、植民地を開発させて最終的には処刑者となることによって社会に代償を支払うことを提案しているのだ。この計画は紙の上では良いように見えるかもしれないが、危険な人物たちを一つの場所に置くことによって反乱が起こる可能性もある。"
+ random_event.EVTDESC22:0 "[Root.GetName]の我々の植民地は、望んでいたほどの進展を見せていない。我々の顧問の1人がこの成長を加速する計画を考え出している。泥棒や債務者といった犯罪者たちを[Root.GetName]に送り、植民地発展のために働くことで社会への償いをし、刑期が終われば最終的には入植者にさせるというものである。一見すると良い計画だが、危険な人物を一カ所に集めることで反乱が起きる可能性もあるだろう。"
  random_event.EVTOPTA22:0 "いい考えだ、早速設置しよう。"
- random_event.EVTOPTB22:0 "これらの人々は信用できない！彼らは刑務所に入れておけ。"
+ random_event.EVTOPTB22:0 "こういう奴らは信用できない！刑務所に入れておけ。"
  penal_colony:0 "流刑地"
  desc_penal_colony:0 "植民地の発展を助けるために、泥棒、債務者、その他の犯罪者たちが、開発に取り組むことで社会に代償を支払うため、ここに送られた。"
  random_event.EVTNAME23:0 "インフルエンザ！"
@@ -4553,8 +4553,8 @@
  CONVHEIR_ELECTIVE:0 "選挙君主制では、後継者が絶えず変化するため、後継者を指揮官にすることはできません。"
  SUPPORT_HEIR:0 "後継者を支援"
  SUPPORT_HEIRTITLE:0 "後継者を支援"
- CANCEL_SUPPORT_HEIR:0 "後継者支援をキャンセル"
- CANCEL_SUPPORT_HEIRTITLE:0 "後継者支援をキャンセル"
+ CANCEL_SUPPORT_HEIR:0 "後継者支援を中止"
+ CANCEL_SUPPORT_HEIRTITLE:0 "後継者支援を中止"
  SUPPORT_HEIR_DESC:0 "§Y$COUNTRY$§Wの王位を得る、我々の王朝の候補者を支持するため、我々の外交官を派遣してもよろしいですか？\n毎月、我々の外交評判に大きく依存して、外交官は候補者の立場を改善するでしょう。この後継者が統治者になれば、その統治者から威信だけでなく2年間の権力を得ることになります。"
  CANCEL_SUPPORT_HEIR_DESC:0 "§Y$COUNTRY$§W王位のために候補者を支援している外交官を召還しますか？\n彼は作業を中止し、候補者はさらなる地位を得ることはないでしょう。"
  SUPPORTHEIRDESC:0 "彼らの王位の後継者として我々の王朝の一員を支援します。"
