--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -401,7 +401,7 @@
  estate_nobles_develop_x:0 "[agenda_province.GetName]の人的資源を増やす"
  estate_church_give_us_money:0 "階級の貢献への補償"
  estate_church_convert_province_x:0 "[agenda_province.GetName]の改宗"
- estate_church_reduce_war_exhaustion:0 "戦禍から立ち直る"
+ estate_church_reduce_war_exhaustion:0 "戦禍からの回復"
  estate_church_recover_stability:0 "国家の安定化"
  estate_church_increase_stability:0 "国家安定度を高める"
  estate_church_reduce_overextension:0 "過剰拡大を削減"
@@ -419,8 +419,8 @@
  estate_burghers_restore_republican_tradition:0 "共和主義の徳の回復"
  estate_burghers_restore_currency:0 "通貨の回復"
  estate_burghers_recovery_from_hyperinflation:0 "ハイパーインフレからの回復"
- estate_burghers_increase_trade_power_in_X:1 "[agenda_trade_node.GetTradeNodeName]の交易力を増やす"
- estate_burghers_access_sea:0 "海へのアクセスを得る"
+ estate_burghers_increase_trade_power_in_X:1 "[agenda_trade_node.GetTradeNodeName]の交易力増加"
+ estate_burghers_access_sea:0 "海へのアクセス確保"
  estate_burghers_build_a_fleet:0 "国家のための海軍を作る"
  estate_burghers_bigger_fleet_than_rival:0 "[agenda_country.GetAdjective]の船からの保護"
  estate_burghers_improve_dip_rep:0 "我々の評判を向上"
@@ -512,12 +512,12 @@
  estate_cossacks_recruit_more_cossacks:0 "より多くのコサックを徴募"
  estate_dhimmi_give_us_money:0 "階級の貢献への補償"
  estate_jains_give_us_money:0 "階級の貢献への補償"
- estate_jains_pay_off_loans:0 "国の借金を完済する"
+ estate_jains_pay_off_loans:0 "国の借金の完済"
  estate_jains_restore_republican_tradition:0 "共和主義の徳の回復"
  estate_jains_restore_currency:0 "通貨の回復"
  estate_jains_recovery_from_hyperinflation:0 "ハイパーインフレからの回復"
- estate_jains_increase_trade_power_in_X:1 "[agenda_trade_node.GetTradeNodeName]の交易力を増やす"
- estate_jains_access_sea:0 "海へのアクセスを得る"
+ estate_jains_increase_trade_power_in_X:1 "[agenda_trade_node.GetTradeNodeName]の交易力増加"
+ estate_jains_access_sea:0 "海へのアクセス確保"
  estate_jains_build_a_fleet:0 "国家のための海軍を作る"
  estate_jains_bigger_fleet_than_rival:0 "[agenda_country.GetAdjective]の船からの保護"
  estate_jains_improve_dip_rep:0 "我々の評判を向上"
@@ -527,12 +527,12 @@
  estate_jains_three_privileges:0 "ジャイナ教徒特権の拡大"
  estate_jains_protect_against_piracy:0 "海賊からの保護"
  estate_vaisyas_give_us_money:0 "階級の貢献への補償"
- estate_vaisyas_pay_off_loans:0 "国の借金を完済する"
+ estate_vaisyas_pay_off_loans:0 "国の借金の完済"
  estate_vaisyas_restore_republican_tradition:0 "共和主義の徳の回復"
  estate_vaisyas_restore_currency:0 "通貨の回復"
  estate_vaisyas_recovery_from_hyperinflation:0 "ハイパーインフレからの回復"
- estate_vaisyas_increase_trade_power_in_X:1 "[agenda_trade_node.GetTradeNodeName]の交易力を増やす"
- estate_vaisyas_access_sea:0 "海へのアクセスを得る"
+ estate_vaisyas_increase_trade_power_in_X:1 "[agenda_trade_node.GetTradeNodeName]の交易力増加"
+ estate_vaisyas_access_sea:0 "海へのアクセス確保"
  estate_vaisyas_build_a_fleet:0 "国家のための海軍を作る"
  estate_vaisyas_bigger_fleet_than_rival:0 "[agenda_country.GetAdjective]の船からの保護"
  estate_vaisyas_improve_dip_rep:0 "我々の評判を向上"
@@ -545,7 +545,7 @@
  estate_vaisyas_protect_against_piracy:0 "海賊からの保護"
  estate_brahmins_give_us_money:0 "階級の貢献への補償"
  estate_brahmins_convert_province_x:0 "[agenda_province.GetName]の改宗"
- estate_brahmins_reduce_war_exhaustion:0 "戦禍から立ち直る"
+ estate_brahmins_reduce_war_exhaustion:0 "戦禍からの回復"
  estate_brahmins_recover_stability:0 "国の安定化"
  estate_brahmins_increase_stability:0 "国家安定度を高める"
  estate_brahmins_reduce_overextension:0 "過剰拡大を削減"
