--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -2234,7 +2234,7 @@
  EVTOPTA6138:0 "良いことづくめだ。"
  EVTNAME6139:0 "植民地会社の破産"
  EVTDESC6139:0 "我々の植民地の冒険的事業の一つは深刻な財政難に陥っており、行動が取られなければ、植民地は苦しむことになるだろう。"
- EVTOPTA6139:0 "彼らは危険を承知の上だった、それは私の問題ではない。"
+ EVTOPTA6139:0 "彼らは危険を承知の上だった、私の問題ではない。"
  EVTOPTB6139:0 "我々が足を踏み入れる時だ。"
  EVTOPTA6140:0 "素晴らしい知らせだ。"
  EVTNAME6141:0 "自己満足な交易"
