--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -58,7 +58,7 @@
  HARMONIZE_DESC:0 "調和した宗教を信仰する州は§Y$NAME$§!であるかのように扱われます。\nしかし、他国については、たとえその国があなたが調和した宗教を信仰していてもあなたを変わらず儒教国家とみなします。"
  HARMONIZE_DESC_CURRENT:1 "現在の§Y$RELIGION$§!との調和\n進捗：§Y$PROGRESS$§!\n完了予定：$DONE|Y$"
  HARMONIZE_GROUP_DESC_CURRENT:1 "現在の§Y$GROUP$§!宗教グループとの調和\n進捗：§Y$PROGRESS$§!\n完了予定：$DONE|Y$"
- CANCEL_HARMONIZATION:0 "調和をキャンセル"
+ CANCEL_HARMONIZATION:0 "調和を中止"
  estate_shangbang:0 "商幇"
  estate_gentry:0 "氏族"
  gentry_dominance:0 "氏族の優位"
@@ -354,7 +354,7 @@
  CONFIRM_HARMONIZATION:0 "調和の確認"
  CONFIRM_CANCEL_MISSIONARIES_DESC:0 "これにより宣教師は以下の州での作業を中止します：\n§Y$PROVS$§!\n"
  CONFIRM_HARMONIZATION_DESC:2 "調和を行っている間、調和は毎年$HARMONY|R$減少します。\n調和は$MONTH_YEAR|Y$に終了するでしょう。"
- CANCEL_HARMONIZATION_DESC:0 "キャンセルした場合、あなたはこれまでの調和の進捗すべてを失うでしょう（現在$PROGRESS|%|Y|0$）"
+ CANCEL_HARMONIZATION_DESC:0 "中止した場合、これまでの調和の進捗（現在$PROGRESS|%|Y|0$）すべてを失います。"
  REFUSED_CALL_LIBERTY_DESIRE:0 "拒否した場合、$SUBJECT$の独立欲求が§R$VAL$§!増加します。"
  overlord_refused_call:0 "宗主国は参戦要請を拒否した"
  RELIGIOUS_GROUP:0 "$NAME$グループ"
@@ -759,7 +759,7 @@
  shinto_events.58.b:1 "南無阿弥陀仏。彼らの信念を受け入れ、我が国の法制度に記すべきだ。"
  MAX_TRIBUTE_REACHED:0 "\n毎年$AMOUNT|Y$ $SYMBOL$以上の貢物を支払うことはできません。"
  CHANGE_TRIBUTE_COOLDOWN:0 "月に一度だけ貢物を変更できます。$UNTIL|Y$に再び変更できるようになります。"
- SWITCH_HARMONIZATION_DESC:0 "これはあなたの$CURRENT|Y$との調和（現在の進捗$PROGRESS|%|Y|0$）を§Rキャンセル§!するでしょう。\n"
+ SWITCH_HARMONIZATION_DESC:0 "これにより、$CURRENT|Y$との調和（現在の進捗$PROGRESS|%|Y|0$）は§R中止§!されます。\n"
  meritocracy_events.1.t:0 "科挙の拡大"
  meritocracy_events.1.d:0 "我々の支配は、我々の毎年の試験が生み出すよりも多くの役人たちを求め、悲鳴を上げている。閣僚の中には、定員を増やす必要があると提案する者もおり、階級をより速く満たすためにはさらに合格者を増やすよう提案している。\nしかし、内閣大学士は、試験に合格するのに最良の者以外を許可し始めれば、試験工程自体の完全性を危険にさらすことになると警告している。"
  meritocracy_events.1.a:0 "定員を増やせ！"
