--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -5952,7 +5952,7 @@
  EMBRACEINST_OTHER_1:0 "我々は"
  EMBRACEINST_OTHER_2:0 "$COUNTRY$"
  EMBRACEINST_OTHER_3:0 "が$INSTITUTION$を採用し、技術開発速度が向上したとの知らせを受けました。"
- EMBRACEINST_OTHER_4:0 "そしてそれらは以下を与えます："
+ EMBRACEINST_OTHER_4:0 "この制度は以下を与えます："
  EMBRACEINST_OTHER_5:0 "$BONUS$"
  EMBRACEINST_OTHER_LOG:0 "$COUNTRY$、$INSTITUTION$を受容"
  EMBRACEINST_OTHER_BTN1:0 "OK"
@@ -6102,9 +6102,9 @@
  TRADE_RELATION_ACCEPT_BTN1:0 "OK"
  TRADE_RELATION_ACCEPT_BTN2:0 "OK"
  TRADE_RELATION_ACCEPT_BTN3:0 "移動"
- STEER_TRADE_RELATION_CANCEL_TITLE:0 "交易誘導をキャンセル"
+ STEER_TRADE_RELATION_CANCEL_TITLE:0 "交易誘導を中断"
  STEER_TRADE_RELATION_CANCEL_SETUP:0 "ある国が交易誘導を中止したとき"
- STEER_TRADE_RELATION_CANCEL_HEADER:0 "交易誘導はキャンセルされました"
+ STEER_TRADE_RELATION_CANCEL_HEADER:0 "交易誘導が中断されました"
  STEER_TRADE_RELATION_CANCEL_1:0 "$THEM$"
  STEER_TRADE_RELATION_CANCEL_2:0 "以下に対する交易を誘導しません："
  STEER_TRADE_RELATION_CANCEL_3:0 "$WHO$"
