--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -143,8 +143,8 @@
  blockade_ports_desc:0 "あなたの目標は、可能な限り多くの港を封鎖し、敵の交易を止めることです。"
  HAVE_HIGHER_LIBERTY_DESIRE_THEN:0 "独立欲求が§Y$VAL$%§!以上である"
  HAVE_LOWER_LIBERTY_DESIRE_THEN:0 "独立欲求が§Y$VAL$%§!未満である"
- IS_NOT_IN_THE_COLONIAL_REGION:0 "植民地地域ではない"
- IS_IN_COLONIAL_REGION:0 "植民地地域である"
+ IS_NOT_IN_THE_COLONIAL_REGION:0 "右記の植民地地域ではない："
+ IS_IN_COLONIAL_REGION:0 "右記の植民地地域である："
  AT_LEAST_ONE_PROVINCE_IN_COLONIAL_REGION:0 "$REGION$植民地域の少なくとも一つの州"
  NOT_ONE_PROVINCE_IN_COLONIAL_REGION:0 "$REGION$植民地域に州がない"
  ALL_PROVINCES_IN_COLONIAL_REGION:0 "$REGION$植民地域の全ての州"
