--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -140,7 +140,7 @@
  DEBASE_CURRENCY:0 "通貨価値の切り下げは§Y$AMOUNT$§W¤をもたらしますが、汚職が§R$CORRUPTION$%§!増加します。\n\nあなたはさらに$FACTOR|Y$回、あるいは汚職が§R$MAX_CORRUPTION$%§!に到達するまで、通貨価値を切り下げることができます。"
  alert_leaving_great_power_instant:0 "§Y列強の地位を喪失中§!"
  alert_leaving_great_power_delayed:0 "$COUNTRYS|Y$の権力が減少しているか、他国が非常に強力に成長しています。いずれかの方法で$DATE|Y$までに我々の偉大さを回復しない限り、我々はもはや§Y列強§!とはみなされないでしょう。"
- CANNOT_CANCEL_OTHERS_BUILDING:0 "§Y$OTHER$§!によって建設されているため、建設をキャンセルすることはできません。"
+ CANNOT_CANCEL_OTHERS_BUILDING:0 "§Y$OTHER$§!によって建設されているため、中止することはできません。"
  BUILD_IN_SUBJECT:0 "建築物の建設が開始されました。"
  BUILD_IN_SUBJECT_EFFECT:0 "彼らは$PROVINCE$で$BUILDING|Y$を建設します。"
  BUILD_IN_SUBJECT_WHAT:0 "我が国で建築物を建設します。"
