--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  GOVERNMENT_REFORM_PROGRESS_IS_LESS_THAN:0 "政府改革進捗度が$PROGRESS|Y$以下\n"
  GOVERNMENT_REFORM_PROGRESS_IS_AT_LEAST:0 "政府改革進捗度が$PROGRESS|Y$以上\n"
- CHANGE_GOVERNMENT_REFORM_PROGRESS:0 "政府改革進捗度$VALUE$を$DIRECTION$。\n"
+ CHANGE_GOVERNMENT_REFORM_PROGRESS:0 "政府改革進捗度$VALUE$を$DIRECTION$します。\n"
  SCORNFUL_DESC:0 "軽蔑的侮辱を行うと評価が2倍低下しますが、彼らの敵からの我々への評価がより上昇します。これを行うには、§Y5§!の威信を消費します。"
  SCORNFUL_ENEMIES_DESC:0 "§Y$COUNTRY$の敵§!"
  SCORNFUL:0 "軽蔑的侮辱"
@@ -836,9 +836,9 @@
  NATIVE_SPONSOR_TEXT_OTHER:0 "彼らは隣国$NEIGHBOR|Y$から政府改革についていくらか学びました。"
  NATIVE_SPONSOR_LEGACY_TEXT:0 "我々は隣国$NEIGHBOR|Y$から学びました。"
  NATIVE_SPONSOR_LEGACY_TEXT_OTHER:0 "彼らは隣国$NEIGHBOR|Y$から学びました。"
- ADD_YEARS_OF_MANPOWER_SCALED_TO_SEATS:1 "議会の議席から人的資源$MANPOWER|G0$を$DIRECTION$。"
- ADD_YEARS_OF_SAILORS_SCALED_TO_SEATS:1 "議会の議席から水兵$SAILORS|G0$を$DIRECTION$。"
- ADD_YEARS_OF_TAX_SCALED_TO_SEATS:0 "議会の議席から税収$TAX|G$を$DIRECTION$。"
+ ADD_YEARS_OF_MANPOWER_SCALED_TO_SEATS:1 "議会の議席から人的資源$MANPOWER|G0$を$DIRECTION$します。"
+ ADD_YEARS_OF_SAILORS_SCALED_TO_SEATS:1 "議会の議席から水兵$SAILORS|G0$を$DIRECTION$します。"
+ ADD_YEARS_OF_TAX_SCALED_TO_SEATS:0 "議会の議席から税収$TAX|G$を$DIRECTION$します。"
  germanic_parliament_name:0 "州議会"
  GER_parliament_name:0 "帝国議会"
  SWE_parliament_name:0 "リクスダーゲン"
@@ -851,8 +851,8 @@
  turko_semitic_parliament_name:0 "メジュリス"
  maghrebi_parliament_name:0 "マジュリス"
  ENACT_REFORM_EFFECT_LOCK_WARNING:0 "（§R取消不可の改革。同じレベルの他の改革に変更することはできなくなります§!）\n"
- ADD_PRESTIGE_SCALED_TO_SEATS:0 "議会の議席から威信$PRESTIGE|G$を$DIRECTION$。"
- ADD_MILITARIZATION_SCALED_TO_SEATS:0 "議会の議席から軍事点$VALUE|G$を$DIRECTION$。"
+ ADD_PRESTIGE_SCALED_TO_SEATS:0 "議会の議席から威信$PRESTIGE|G$を$DIRECTION$します。"
+ ADD_MILITARIZATION_SCALED_TO_SEATS:0 "議会の議席から軍事化$VALUE|G$を$DIRECTION$します。"
  CREATE_TEAM:0 "チームを作成"
  LEAVE_TEAM:0 "チームを去る"
  REFORM_ESTATE_EFFECT:0 "§Y階級効果:§!\n"
