--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1356,19 +1356,19 @@
  flavor_spa.EVTDESC1000:0 "16世紀初頭、枢機卿フランシスコ・ヒメネス・デ・シスネロスは、スペインでのレコンキスタが完了した今、彼の宗教的な熱意のはけ口を見出し、北アフリカの沿岸に狙いを定めた。彼は個人的に、オランの都市に対する十字軍の資金を調達し、人員を組織した。メルス・エル・ケビール港は1505年に占領され、1509年にはシスネロス自身が同行し、傭兵隊長ペドロ・ナバーラが率いる強力な勢力により、ついにオランを攻略した。"
  flavor_spa.EVTOPTA1000:0 "アフリカへの拡大は好都合だろう。"
  flavor_spa.EVTNAME1006:0 "スペイン黄金世紀"
- flavor_spa.EVTDESC1006:0 "スペインの黄金時代は、15世紀後半から17世紀初頭にかけてであり、芸術、文学、建築が盛んで、エル・グレコや有名な『ブレダの開城』を製作したディエゴ・ベラスケスのような画家や、バジャドリード大聖堂を設計し、純粋で落ち着いた装飾が特徴で、「古典主義」として知られるフアン・デ・エレーラのような建築家が活躍した。当時の多くの作家の一人がミゲル・デ・セルバンテスであり、『ドン・キホーテ・デ・ラ・マンチャ』を出版した。"
+ flavor_spa.EVTDESC1006:0 "スペインの黄金時代（Siglo de Oro）は、15世紀後半から17世紀初頭にかけてであり、芸術、文学、建築が盛んで、エル・グレコや有名な『ブレダの開城』を製作したディエゴ・ベラスケスのような画家や、バジャドリード大聖堂を設計し、純粋で落ち着いた装飾が特徴で、「古典主義」として知られるフアン・デ・エレーラのような建築家が活躍した。当時の多くの作家の一人がミゲル・デ・セルバンテスであり、『ドン・キホーテ・デ・ラ・マンチャ』を出版した。"
  flavor_spa.EVTOPTA1006:0 "文化を奨励する。"
  flavor_spa.EVTOPTB1006:0 "それは資源の無駄だ。"
  flavor_spa.EVTNAME1001:0 "ブルゴス法"
- flavor_spa.EVTDESC1001:0 "ブルゴス法は、1512年にブルゴス市で制定されたアメリカ大陸におけるスペイン人の行動に関する一連の法律である。それらは特に、先住民族の待遇に関係するものであった。植民地が植民地を強制的にグループ化して働かせることを法律で認めていたが、法律は労働、賃金、引当金、居住に関する規則も規制していた。法律は入植者がインディアンを強制的に集団化して働かせることを認めていたが、労働、賃金、引当金、居住に関する規則も定めていた。しかし法律は、あいまいな実施のために、インディアンの苦しみを和らげることにはほとんど役立たなかった。"
- flavor_spa.EVTOPTA1001:0 "これらの法律を施行！"
+ flavor_spa.EVTDESC1001:0 "ブルゴス法は、1512年にブルゴス市で制定されたアメリカ大陸におけるスペイン人の行動に関する一連の法律である。これらの法律は、特に先住民の待遇に関するものであった。この法律は、入植者が強制的にインディアンを集めて働かせることを認めていたが、労働、賃金、食事、住居などに関する規則も定めていた。また、当局以外の者が罰を与えることも禁止されていた。しかし、この法律は、実施が不十分であったため、インディアンの苦しみを和らげることはできなかった。"
+ flavor_spa.EVTOPTA1001:0 "これらの法律を施行せよ！"
  flavor_spa.EVTOPTB1001:0 "我々は征服者の権利に基づいて支配する！"
  flavor_spa.EVTNAME1002:0 "新しい法律"
  flavor_spa.EVTDESC1002:0 "インディアンの優遇措置と保全のための新しい法律、短く言えば「新法」はカール5世によって1542年に制定された。それらは1512年のブルゴス法の失敗への対応であり、再びアメリカ先住民の搾取を規制し、インディアンの奴隷化を禁じるものであった。新法は、ゴンサロ・ピサロによるペルーの反乱を含め、植民地における大きな不安を引き起こした。"
- flavor_spa.EVTOPTA1002:0 "これらの法律を施行！"
+ flavor_spa.EVTOPTA1002:0 "これらの法律を施行せよ！"
  flavor_spa.EVTOPTB1002:0 "これらの解決を植民地に任せる。"
  flavor_spa.EVTNAME1003:0 "通商院"
- flavor_spa.EVTDESC1003:0 "通商院は1503年に、スペインの全植民地を監督する政府の機関として、カスティーリャのイサベル1世によって設立された。探検と交易の航海はそれによって承認されなければならず、すべての植民地税はそれによって徴収された。通商院はまた、新しい交易路と発見に関する秘密情報を保護しようとするよう命じられた。"
+ flavor_spa.EVTDESC1003:0 "通商院（Casa de Contratación）は1503年に、スペインの全植民地を監督する政府の機関として、カスティーリャのイサベル1世によって設立された。探検と交易の航海はそれによって承認されなければならず、すべての植民地税はそれによって徴収された。通商院はまた、新しい交易路と発見に関する秘密情報を保護しようとするよう命じられた。"
  flavor_spa.EVTOPTA1003:0 "我々はそれを確立すべきだ。"
  flavor_spa.EVTOPTB1003:0 "植民地の業務は王室のためにならない。"
  flavor_spa.EVTNAME1004:0 "太陽は沈まない"
@@ -1376,7 +1376,7 @@
  flavor_spa.EVTOPTA1004:0 "それは「太陽の沈まない帝国」と呼ばれた。"
  flavor_spa.EVTOPTB1004:0 "我々は真に世界を支配している！"
  flavor_spa.EVTNAME3153:0 "交易中心地セビリア"
- flavor_spa.EVTDESC3153:0 "セビリアは新世界の発見により、最も繁栄した時期に入った。それは新しい植民地との貿易の主要港であった。スペインの君主はすぐに、スペインの植民地からの貨物を独占することができた。"
+ flavor_spa.EVTDESC3153:0 "新世界の発見により、セビリアは最も繁栄した時期に入った。それは新しい植民地との貿易の主要港であった。スペインの君主はすぐに、スペインの植民地からの貨物を独占することができた。"
  flavor_spa.EVTOPTA3153:0 "我々は現在、海外との交易を支配している。"
  flavor_spa.EVTNAME3154:0 "フッガー家"
  flavor_spa.EVTDESC3154:0 "フッガー家は、アウクスブルク出身の15世紀の農民の織工で、ハプスブルク家やローマ教皇の銀行家との取引を行った。富豪ヤーコプ・フッガー（1511～1525）はカール5世の戦争と皇帝への選挙に資金を提供し、ヨーロッパの鉛、銀、銅の生産を支配し、水銀の独占権を得た。アントン・フッガー（1525～1560）は、チリ、ペルー、モスクワにおける交易の利権を持っていた。しかし、スペイン国家の倒産、家庭内の紛争、後継者の関心の欠如のため、16世紀末までに会社は衰退した。"
@@ -1547,9 +1547,9 @@
  flavor_spa.5.a:0 "我々の行政の言語として[Root.Culture.GetName]を採用する。"
  flavor_spa.5.b:0 "我々は代わりに、我々の王国のすべての言語を組み込むことを試みるべきだ。"
  flavor_spa.6.t:0 "スペインの新たな首都"
- flavor_spa.6.d:0 "スペインの統一によって、多くの古い領域からなる王国が生まれた。[Root.Capital.GetCapitalName]は我々の前任者にはうまく役立ったが、マドリードの小さな都市は、その中心的な位置と歓迎すべき気候により、スペインのすべての領域を支配するより良い場所になることを示唆している。現存するマドリードの宮殿は適切な王室に拡張することができるが、一般に市は未だに未開発であり、我々の王国の都市計画者のため白紙の状態を提供することができる。偉大な帝国を支配する新たな首都を建設しよう！"
- flavor_spa.6.a:0 "マドリードだけが宮廷だ！"
- flavor_spa.6.b:0 "[Root.Capital.GetCapitalName]が我々の王朝の首都のままだ。"
+ flavor_spa.6.d:0 "スペインの統一によって、多くの古い領域からなる王国が生まれた。[Root.Capital.GetCapitalName]は我らが先人たちによく貢献してきたが、スペインの全領域を支配するには、その中心的な位置と快適な気候を持つ小都市マドリードがより良い場所になるだろうと提案されている。現存するマドリード宮殿（Real Alcázar de Madrid）は王室の住居として拡張することができるが、一般的な都市はまだ未開発であるため、王国の都市計画者にとっては白紙の状態である。偉大な帝国統治するにふさわしい新しい首都を築こうではないか！"
+ flavor_spa.6.a:0 "¡Sólo Madrid es corte!（マドリードだけが宮廷だ！）"
+ flavor_spa.6.b:0 "[Root.Capital.GetCapitalName]が我が王朝の首都のままだ。"
  flavor_spa.7.t:0 "ラス・アルプハラス戦争"
  flavor_spa.7.d:0 "キリスト教徒の聖職者たちは、モリスコのキリスト教徒の改宗を常に疑いの目で眺めてきた。最近征服されたグラナダ王国では、改宗を促す政策があまりにも効率的すぎるという状況により、これはさらに真実味を増している。キリスト教徒の疑惑が正しかったかどうか、恐れられた隠れたカトリック教徒を迫害してきた彼らの行動の結果であるかどうかはわからないが、グラナダの元王国のモリスコたちは、もうたくさんだと感じている。\nシエラネバダ山脈の斜面にはムーア人たちが新たなグラナダ王家を築き上げ、そして、反乱の拡大とともに、教会の破壊、拷問とキリスト教司祭の殺害、そして我々の最大のカトリック王国への公然とした抗議が報告された。"
  flavor_spa.7.a:0 "OK"
