--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -433,9 +433,9 @@
  personality_events.53.d:0 "これは言いすぎだが、我々は[assassination_nation.GetName]の[assassination_nation.Monarch.GetTitle][assassination_nation.Monarch.GetName]の悪党たちから他に何を予想できただろう？昨晩、[Root.Monarch.GetTitle][Root.Monarch.GetName]は、[Root.Monarch.GetHerHis]の際どいところで暗殺の試みから生き延びた。我々は今回に限り、[Root.Monarch.GetHerHis]の浮気な性格に感謝しており、それがなければ、毒の塗られた短剣は確実にその目標を見つけていただろう。警備兵は犯人を捕まえることができ、我々の尋問者からの刺激を受け、我々は誰を非難すべきか​​正確に分かっている…"
  personality_events.53.a:0 "背後から短剣だと？我々はこの侮辱を軽く取ることはないだろう！"
  personality_events.54.t:0 "偶発的な賛辞"
- personality_events.54.d:0 "宴会の間に、[Root.Monarch.GetTitle][Root.Monarch.GetName]は、上品な食べ物とデザートについての議論に入った。関連者のほとんどは地元の料理の強みを主張して評価を固く維持していたが、[Root.Monarch.GetSheHe]が[Root.Monarch.GetHerHis]の意見をうっかり漏らした時、[Root.Monarch.GetTitle]は困ったことを述べた。「私はいつも、[cool_neighbor_country.GetName]が最高のチーズの大皿を持っていると思っていた！我々の物は比較にならないほど無味乾燥としている！」\n\nシェフはひどく侮辱されたが、[cool_neighbor_country.GetName]の[cool_neighbor_country.Monarch.GetTitle][cool_neighbor_country.Monarch.GetName]が[cool_neighbor_country.Monarch.GetHerHis]の使者の一人として諜報員を持っていたのは間違いなく、後日、我々の元に大きなチーズの木箱が無料で届けられた。"
- personality_events.54.a:0 "ああ、[Root.Monarch.GetName]を忘れていた！"
- personality_events.54.a.tt:0 "[cool_neighbor_country.Monarch.GetName]は、我々の[Root.Monarch.GetTitle]の気配りの欠如によって喜んでいました。"
+ personality_events.54.d:0 "宴席中、[Root.Monarch.GetTitle][Root.Monarch.GetName]は、上品な食べ物とデザートについての議論に入った。関係者のほとんどは地元の料理の強みを主張して評価を固く維持していたが、[Root.Monarch.GetTitle]が[Root.Monarch.GetHerHis]の意見を口にしたときに、気まずい発言をした。「私はいつも、[cool_neighbor_country.GetName]が最高のチーズの大皿を持っていると思っていた！それに比べ、我々のは全く味気ない！」\n\nシェフはひどく侮辱されたが、[cool_neighbor_country.GetName]の[cool_neighbor_country.Monarch.GetTitle][cool_neighbor_country.Monarch.GetName]の諜報員がいたのか、後日、我々の元に大きなチーズの木箱が無料で届けられた。"
+ personality_events.54.a:0 "ああ、あの忘れっぽい[Root.Monarch.GetName]が！"
+ personality_events.54.a.tt:0 "[cool_neighbor_country.Monarch.GetName]は、我々の[Root.Monarch.GetTitle]の機転の利かなさに喜んでいた。"
  personality_events.55.t:0 "[Root.GetName]の最良"
  personality_events.55.d:0 "我々の偉大な[Root.GovernmentName]の軍隊とは、役立つ最高の[Root.GetAdjective]兵士に他ならない！[Root.Monarch.GetTitle][Root.Monarch.GetName]は、我々の軍隊の未来を熟考して多くの眠れない夜を過ごし、より高い基準を設定する必要があると結論付けた。その結果、利用可能な兵士の数は確かに少なくなるかもしれないが、我々は戦闘で兵士たちにより多くのものを期待することができる。"
  personality_events.55.a:0 "確かに、我々は量より質を重視するべきだ！"
