--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -105,7 +105,7 @@
  ADD_IDEA:0 "§Y$NEW$§Wを新たなアイデアとして採用します。\n"
  REM_IDEA:0 "§Y$LOSE$§Wがアイデアから外されます。\n"
  GOV_CHANGE:0 "政体が§Y$GOV$§Wに変更されます。\n"
- TECH_INVEST:0 "$TECH$への投資$VALUE$を$DIRECTION$。\n"
+ TECH_INVEST:0 "$TECH$への投資$VALUE$を$DIRECTION$します。\n"
  GROUP_CHANGE:0 "技術グループが§Y$GROUP$§Wへと変更されます。\n"
  CHANGE_TAG:0 "§Y$NEW$§Wになります。\n"
  SET_GOVERNMENT_RANK:0 "$WHO$の政府ランクが$RANK$に変わります。"
@@ -127,7 +127,7 @@
  HRE_STATUS:0 "§Y$WHERE$§Wは神聖ローマ帝国の一部$DIRECTION$。\n"
  BECOME:0 "になります"
  NOLONGER:0 "ではなくなります"
- PROV_MANPOWER:0 "$WHERE$の人的資源$VALUE$を$DIRECTION$。\n"
+ PROV_MANPOWER:0 "$WHERE$の人的資源$VALUE$を$DIRECTION$します。\n"
  DISCOVER:0 "§Y$WHERE$§Wを発見します。\n"
  ADD_BUILDING:0 "§Y$WHERE$§Wで§Y$NAME$§Wを獲得します。\n"
  REM_BUILDING:0 "§Y$WHERE$§Wで§R$NAME$§Wを失います。\n"
@@ -581,7 +581,7 @@
  FIRE_STATS:0 "射撃：§Y$STATS$§!\n"
  SHOCK_STATS:0 "白兵：§Y$STATS$§!\n"
  MAN_STATS:0 "機動：§Y$STATS$§!\n"
- FLANK_STATS:0 "隣接した範囲：§Y$STATS$§!\n"
+ FLANK_STATS:0 "隣接範囲：§Y$STATS$§!\n"
  CURRENT_MONARCH:0 "現在の支配者"
  VIEW_PAP:0 "教皇庁"
  VIEW_HRE:0 "神聖ローマ帝国"
@@ -669,8 +669,8 @@
  INTRADELEAGUEWITH:0 "$LIST$との貿易同盟を形成しています。"
  ATWARWITH:0 "$LIST$と戦争中です。"
  ALLIEDWITH:0 "$LIST$と同盟を結んでいます。"
- CURENT_CORING:0 "現在、中核州を構築中です！"
- NOTCORE:0 "中核州ではない"
+ CURENT_CORING:0 "現在、中核化しています！"
+ NOTCORE:0 "非中核州"
  TERRITORIALCORE:0 "テリトリーの中核州"
  ISCORE:0 "完全中核州"
  SUPPORTINGINDEPENDENCE:0 "$LIST$の独立を支援しています。"
@@ -2388,8 +2388,8 @@
  HULLSIZE:0 "船体サイズ"
  SAILSPEED:0 "速度"
  MANEUVER:0 "機動"
- MANEUVER_NEW:0 "隣接した範囲"
- MANEUVER_NEW_VALUE:0 "隣接した範囲：§Y$VALUE$§W"
+ MANEUVER_NEW:0 "隣接範囲"
+ MANEUVER_NEW_VALUE:0 "隣接範囲：§Y$VALUE$§W"
  DOMESTIC_ADMIN:0 "統治"
  DOMESTIC_DIPLOMACY:0 "外交"
  DOMESTIC_MILITARY:0 "軍事"
@@ -2702,7 +2702,7 @@
  PP_CHARGE:0 "突撃！"
  PP_FEROCITY:0 "獰猛性："
  LEDGER_CORE:0 "中核州"
- LEDGER_NOT_CORE:0 "中核州ではない"
+ LEDGER_NOT_CORE:0 "非中核州"
  LOADING_MAP_SPRITES:0 "マップのスプライトを読み込み中…"
  LOADING_GUI_DEF:0 "GUI定義を読み込み中…"
  LOADING_DATABASES:0 "データベースを読み込み中…"
@@ -4399,7 +4399,7 @@
  HRE_DISMANTLE_EMPEROR:0 "現皇帝の本国首都である$COUNTRY$の$PROV$を支配する必要があります。"
  HRE_DISMANTLE_ELECTORS:0 "選帝候国$COUNTRY$があなた、又はあなたの従属国によって支配されていません。"
  NOOPENMARKET:0 "この市場は現在、我々の商人に対して閉鎖されています。我々はこれを開くために戦争や外交手段を使うことができます。"
- REVOLTRISK_EFFECT:1 "$WHERE|Y$の不穏度$VALUE$を$DIRECTION$（現在値：$CURRENT|R$）。\n"
+ REVOLTRISK_EFFECT:1 "$WHERE|Y$の不穏度$VALUE$を$DIRECTION$（現在：$CURRENT|R$）します。\n"
  LEDGER_CANT_BUILD_THIS_TECH:0 "現在の技術レベルでは、この建物を建設することはできません"
  LEDGER_CANT_BUILD_THIS_FULL:0 "すべての州で建設済みです"
  DO_NOT_HAVE_ADVISOR:0 "顧問がいない"
@@ -4714,7 +4714,7 @@
  TOLERANCE_TO_RELIGION_LESS_THAN:0 "宗教への寛容度が右記未満である："
  TOLERANCE_TO_RELIGION_GREATER_THAN:0 "宗教への寛容度が右記以上である："
  ANY_KNOWN_COUNTRY_STARTS:0 "いずれかの既知の国家"
- EXTRA_NATIONALISM_DESC:0 "$WHERE$の分離主義を$VALUE$年間$DIRECTION$。\n"
+ EXTRA_NATIONALISM_DESC:0 "$WHERE$の分離主義を$VALUE$年間$DIRECTION$します。\n"
  MODIFIER_TOLERANCE_OWN:0 "真の信仰の寛容度"
  MODIFIER_TOLERANCE_HERETIC:0 "異端の寛容度"
  MODIFIER_TOLERANCE_HEATHEN:0 "異教徒の寛容度"
@@ -5156,8 +5156,8 @@
  protect_italy_from_the_french_desc:0 "北イタリアは、オーストリアの西への最も明白な侵略路の一つである。君主の安全から、ただの一つの州でさえフランスの支配下にある限りは、平和などありえないことが要求されている。"
  protect_italy_from_the_french_republic_title:0 "革命軍からイタリアを保護"
  protect_italy_from_the_french_republic_desc:0 "革命的なフランスの騒々しい群れは北イタリアを圧倒すると脅している。これが起こらないようにするのは我々の神聖な義務である。北イタリアのどの州も、革命的なジャコバン派の手に委ねられてはならない。"
- RULER_IS_MALE:0 "支配者は男性である"
- RULER_IS_FEMALE:0 "支配者は女性である"
+ RULER_IS_MALE:0 "支配者が男性である"
+ RULER_IS_FEMALE:0 "支配者が女性である"
  NUMBER_OF_COLONISTS:0 "植民者"
  LESS_THAN:0 "右記未満："
  AT_LEAST:0 "右記以上："
@@ -7043,8 +7043,8 @@
  HAVE_LEGITIMACY_MORE_THAN:0 "正統性が右記以上である："
  HAVE_HORDE_UNITY_LESS_THAN:0 "遊牧民の結束が右記未満である："
  HAVE_HORDE_UNITY_MORE_THAN:0 "遊牧民の結束が右記以上である："
- HORDE_UNITY_EFFECT:0 "遊牧民の結束$VALUE$を$DIRECTION$。\n"
- LEGITIMACY_EFFECT:0 "正統性$VALUE$を$DIRECTION$。\n"
+ HORDE_UNITY_EFFECT:0 "遊牧民の結束$VALUE$を$DIRECTION$します。\n"
+ LEGITIMACY_EFFECT:0 "正統性$VALUE$を$DIRECTION$します。\n"
  NO_CHANGE:0 "変化なし"
  intolerance:0 "不寛容"
  legitimacy:0 "正統性"
