--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -259,7 +259,7 @@
  CANT_CHANGE_COLONIAL_TYPE_NOT_ENOUGH_CASH:0 "$COST$¤所持していません。"
  MODIFIER_COLONIAL_SUBJECT_TYPE_UPGRADE_COST_MODIFIER:0 "植民地従属国のタイプのアップグレードコスト補正"
  COLONY_UPGRADE_EFFECTS_TOOLTIP:0 "アップグレードの有効化："
- UPGRADE_SUBJECT_TYPE:0 "従属国との関係を変更する"
+ UPGRADE_SUBJECT_TYPE:0 "従属関係を修正する"
  UPGRADE_SUBJECT_TYPE_EFFECT:0 "関係が含まれるようになりました：\n$SUBJECTTYPEUPGRADE$。"
  UPGRADE_SUBJECT_TYPE_WHAT:0 "関係が変化します。"
  UPGRADE_SUBJECT_TYPE_DESC:0 "従属国との関係を変更します。"
@@ -855,7 +855,7 @@
  MAY_BUILD_FLAGSHIPS:0 "旗艦の建造が可能です"
  MAY_BUILD_FLAGSHIPS_SHORT:0 "旗艦の建造"
  FREE_MERCHANT_DESC:0 "商人は交易ノードにおいてあなたが有している交易力を好きな方向へ転送したり、交易首都から資金を回収するために割り当てたりすることができます。現在、暇な商人がいるので、交易ノードを選択しタスクを割り当てて、彼らの能力を活かしましょう。"
- REGENCY_ENDING_DESC:0 "あなたの後継者に準備ができていて、請求権が十分であれば、摂政が終了したときに王位に就かせるべきです。そうでない場合は、宮廷インターフェイスで摂政をさらに5年間延長することができます。\nクリックすると宮廷が表示されます。\n\n現在の請求権の強さ：$CLAIM$"
+ REGENCY_ENDING_DESC:0 "後継者の準備ができていて、請求権も十分であれば、摂政が終了したときに王位に就かせるべきです。そうでない場合は、宮廷インターフェイスで摂政をさらに5年間延長することができます。\nクリックすると宮廷が表示されます。\n\n現在の請求権の強さ：$CLAIM$"
  CANNOT_CONVERT_NOT_RELIGION_OR_SECONDARY_RELIGION:0 "$NAME$は§Y$RELIGION$§!や§Y$SECONDARYRELIGION$§!の州ではないので、文化転向はできません。まずは宣教師を派遣しましょう。"
  NO_GARRISON:0 "ここに守備隊はいません。"
  PILLAGE_CAPITAL_CANNOT_NO_DEV:0 "その首都はあまりに貧しいので収奪できません。"
