--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -12,12 +12,12 @@
  NOT_GOLDEN_ERA:0 "$COUNTRY|Y$が黄金時代に入っていない。"
  DEVASTATION_LESS_THAN:0 "荒廃度が$VAL|Y$未満である。\n"
  DEVASTATION_AT_LEAST:0 "荒廃度が$VAL|Y$以上である。\n"
- DEVASTATION_EFF:0 "$WHERE$の荒廃度$VALUE$を$DIRECTION$。\n"
+ DEVASTATION_EFF:0 "$WHERE$の荒廃度$VALUE$を$DIRECTION$します。\n"
  PROSPERITY_LESS_THAN:0 "繁栄度の進捗状況が$VAL|Y$未満である。\n"
  PROSPERITY_AT_LEAST:0 "繁栄度の進捗状況が$VAL|Y$以上である。\n"
  TRIG_STATE_NOT_PROSP:0 "$NAME|Y$が繁栄していない。\n"
  TRIG_STATE_PROSP:0 "$NAME|Y$が繁栄している。\n"
- PROSP_EFF:0 "$WHERE|Y$の繁栄度$VALUE$を$DIRECTION$。\n"
+ PROSP_EFF:0 "$WHERE|Y$の繁栄度$VALUE$を$DIRECTION$します。\n"
  AGE_ABIL_TRIG_NOT:0 "「$NAME|Y$」の能力を持っていない。\n"
  AGE_ABIL_TRIG:0 "「$NAME|Y$」の能力を持っている。\n"
  STATE_EDICT_TRIG_NOT:0 "「$NAME|Y$」の布告を持っていない。\n"
@@ -44,7 +44,7 @@
  INSTITUTION_ENABLED:0 "$WHICH|Y$が発見されている。\n"
  NOT_INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地ではない。\n"
  INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地である。"
- ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$は$WHICH|Y$への支持$VALUE$を$DIRECTION$。\n"
+ ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$は$WHICH|Y$への支持$VALUE$を$DIRECTION$します。\n"
  HAS_MERCHANT_TRIGGER:1 "$WHO|Y$の商人が$WHERE|Y$にいる。\n"
  HAS_NOT_MERCHANT_TRIGGER:0 "$WHO|Y$の商人が$WHERE|Y$にいない。\n"
  HAS_NOT_DISASTER:0 "$NAME|Y$にない。\n"
@@ -161,7 +161,7 @@
  NATION_DESIGNER_TECH_GROUP_COST:0 "以下の条件により$COST|Y$のポイントコスト：\n"
  REFORM_DESIRE_IS_LESS_THAN:0 "改革欲求が§Y$SIZE$§!未満である。\n"
  REFORM_DESIRE_IS_AT_LEAST:0 "改革欲求が§Y$SIZE$§!以上である。\n"
- REFORM_DESIRE_EFFECT:1 "カトリックは$PERC|%-$の改革欲求を$DIRECTION$。\n"
+ REFORM_DESIRE_EFFECT:1 "カトリックは$PERC|%-$の改革欲求を$DIRECTION$します。\n"
  RELIG_ATTACK:0 "宗教の敵への攻撃"
  GOV_ATTACK:0 "異なる政体への攻撃"
  HAS_NOT_IDEA_ALLOWING:1 "「$WHICH$」が可能なアイデアを取得していない。\n"
@@ -204,9 +204,9 @@
  IS_A_POSSIBLE_MARCH:0 "は可能な辺境伯である"
  HAS_NOT_TERRAIN:0 "$TERRAIN|Y$の地形を持っていない"
  HAS_TERRAIN:0 "$TERRAIN|Y$の地形を持っている"
- ADM_POWER_EFFECT:0 "統治力$VALUE$を$DIRECTION$。\n"
- DIP_POWER_EFFECT:0 "外交力$VALUE$を$DIRECTION$。\n"
- MIL_POWER_EFFECT:0 "軍事力$VALUE$を$DIRECTION$。\n"
+ ADM_POWER_EFFECT:0 "統治力$VALUE$を$DIRECTION$します。\n"
+ DIP_POWER_EFFECT:0 "外交力$VALUE$を$DIRECTION$します。\n"
+ MIL_POWER_EFFECT:0 "軍事力$VALUE$を$DIRECTION$します。\n"
  ADD_IDEA_GROUP_EFFECT:0 "$IDEAGROUP|Y$のアイデアグループを追加します。"
  REMOVE_IDEA_GROUP_EFFECT:0 "$IDEAGROUP|Y$のアイデアグループを削除します。"
  ADD_IDEA_EFFECT:0 "$IDEA|Y$のアイデアを追加します。"
@@ -509,7 +509,7 @@
  SET_CELESTIAL_EMPEROR_DESC:0 "$COUNTRYNAME$が中華皇帝になります。\n"
  DISMANTLE_CELESTIAL_EMPIRE_DESC:0 "中華帝国が解体されます。\n"
  REFORM_CELESTIAL_EMPIRE_DESC:0 "中華帝国が再建されます。\n"
- ADD_MANDATE_DESC:0 "天命$MANDATECHANGE|Y$を$DIRECTION$。\n"
+ ADD_MANDATE_DESC:0 "天命$MANDATECHANGE|Y$を$DIRECTION$します。\n"
  SET_MANDATE_DESC:0 "天命が$MANDATEVALUE|Y$になります。\n"
  IS_SUBJECT_TYPE:0 "$SUBJECTTYPE$である。\n"
  IS_NOT_SUBJECT_TYPE:1 "$SUBJECTTYPE$ではない。\n"
@@ -537,8 +537,8 @@
  ADD_INCIDENT_VARIABLE_VALUE_EFFECT:0 "$INCIDENTNAME|Y$に$VALUE|Y$を追加します。\n"
  SET_INCIDENT_VARIABLE_VALUE_EFFECT:0 "$INCIDENTNAME|Y$を$VALUE|Y$に設定します。\n"
  END_INCIDENT_EFFECT:0 "事件「$INCIDENTNAME|Y$」が終了します。\n"
- ADD_HARMONY_EFFECT:0 "調和$VALUE|Y$を$DIRECTION$。\n"
- ADD_HARMONIZATION_PROGRESS_EFFECT:0 "宗教的調和の進捗$VALUE|Y$を$DIRECTION$。\n"
+ ADD_HARMONY_EFFECT:0 "調和$VALUE|Y$を$DIRECTION$します。\n"
+ ADD_HARMONIZATION_PROGRESS_EFFECT:0 "宗教的調和の進捗$VALUE|Y$を$DIRECTION$します。\n"
  HARMONY_LESS_THAN:0 "調和が§Y$VAL$%§!未満である"
  HARMONY_AT_LEAST:0 "調和が§Y$VAL|Y$%§!以上である"
  HARMONIZATION_PROGRESS_LESS_THAN:0 "調和の進捗が§Y$VAL$%§!未満である"
@@ -603,7 +603,7 @@
  EFFECT_REMOVE_ALL_LATENT_GOODS:0 "$PROVINCE|Y$のすべての潜在的交易品が削除されます。"
  INNOVATIVENESS_IS_LESS_THAN:0 "革新性が§Y$SIZE$§!未満である。\n"
  INNOVATIVENESS_IS_AT_LEAST:0 "革新性が§Y$SIZE$§!以上である。\n"
- CHANGE_INNOVATIVENESS_EFFECT:0 "革新性を$VALUE$$DIRECTION$。\n"
+ CHANGE_INNOVATIVENESS_EFFECT:0 "革新性を$VALUE$$DIRECTION$します。\n"
  ADD_RAJPUT_SUB_UNIT_EFFECT:0 "$WHERE|Y$で「§Gラージプート§!」$UNIT$を得ます。"
  HAS_NOT_MORE_PRIVATEERS_IN_NODE:0 "$WHO|Y$の$WHERE|Y$での私掠船のシェアは$VAL$%未満である。"
  HAS_SAME_OR_MORE_PRIVATEERS_IN_NODE:0 "$WHO|Y$の$WHERE|Y$での私掠船のシェアは$VAL$%以上である。"
