--- a/source/localisation/mughal_government_l_english.yml
+++ b/source/localisation/mughal_government_l_english.yml
@@ -58,7 +58,7 @@
  mughal_government_turko_semitic_assimilated:0 "レヴァント騎兵"
  mughal_government_turko_semitic_assimilated_desc:0 "アラブ世界は頑強な体格をした戦馬で有名だ。我々の兵をこれらの頑強な馬に乗せると、我が騎兵隊は戦場でさらに恐ろしいものとなる。"
  mughal_government_maghrebi_assimilated:0 "バルバリア海賊"
- mughal_government_maghrebi_assimilated_desc:0 "マグレブ人はアフリカの北部海岸に広がっている。彼らは、イタリア諸国によってもたらされた豊かな交易を略奪した長い経験を持つ。彼らを私掠船の乗組員にすることによって我が海軍へ入隊させるべきだ。"
+ mughal_government_maghrebi_assimilated_desc:0 "マグリブ人はアフリカの北部海岸に広がっている。彼らは、イタリア諸国によってもたらされた豊かな交易を略奪した長い経験を持つ。彼らを私掠船の乗組員にすることによって我が海軍へ入隊させるべきだ。"
  mughal_government_malay_assimilated:0 "マレーの商人公爵"
  mughal_government_malay_assimilated_desc:0 "マレー人は商業の専門知識に関して長い伝統を持っている。成功を望むマレーの支配者は、地元商人との相対的強みと交易政策をしっかりと握らねばならない。この商業知識の豊富さは、我々にうまく役立つだろう。"
  mughal_government_mande_assimilated:0 "イスラムの西方地域"
