--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -176,7 +176,7 @@
  organised_recruiting_desc:0 "昔の将軍たちは、兵士の徴集に多大な時間を要していた。一般に、前線での死を望むものは少ない。しかし、もっと効率的に人員を徴集する体制を確立することはできるはずだ。"
  optimism:0 "楽観主義"
  optimism_desc:0 "勝利は戦場だけでなく、応接間でも勝ち取ることができる。理性の進歩は民衆が一時の挫折を乗り越え、勝利を確実なものとすることを可能にする。"
- formalized_officer_corps:0 "正規の士官部隊"
+ formalized_officer_corps:0 "将校団の正式化"
  formalized_officer_corps_desc:0 "伝統的に士官は貴族出身だったが、貴族の数は決して多くはなく、それゆえに我々は士官の不足に悩まされている。だが、軍には下層階級の人間がたくさんいる。彼らを士官に昇格させることも、一考の余地があるのではなかろうか？"
  religious_ideas:0 "宗教アイデア"
  religious_ideas_bonus:0 "完成した宗教アイデア"
@@ -6600,7 +6600,7 @@
  galley_slaves:0 "ガレー奴隷"
  galley_slaves_desc:0 "捕らえた奴隷全てが東方で売られる訳ではない。多くはガレー船で務める運命であり、船を漕ぐ船員の即時供給を確保する。"
  vengeful_refugees:0 "復讐心に燃える難民"
- vengeful_refugees_desc:0 "ムスリムとモリスコ双方がイベリアのキリスト教徒によって追放された際、難民はマグレブに逃れた。これらの難民は、強制退去させられた事について全く喜んでおらず、彼らの崩壊につけこむ機会をしきりに受け入れている。"
+ vengeful_refugees_desc:0 "ムスリムとモリスコ双方がイベリアのキリスト教徒によって追放された際、難民はマグリブに逃れた。これらの難民は、強制退去させられた事について全く喜んでおらず、彼らの崩壊につけこむ機会をしきりに受け入れている。"
  mazmorras:0 "マスモーラ"
  mazmorras_desc:0 "キリスト教徒の公爵たちは、我々の地下牢、非常に恐ろしいマスモーラについて恐ろしい話を語る。ここでは、最も価値の高い捕虜、安全帰還の為に金を支払ってくれる裕福な家族の一員である者達を引き留める。典型的なマスモーラの状況は、身代金が迅速に支払われることを保証する。"
  barbary_slave_trade:0 "バルバリアの奴隷貿易"
