--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -257,7 +257,7 @@
  ideagroups.605.a:0 "良い知らせだ！"
  improved_dip_reputation:0 "改善された評判"
  desc_improved_dip_reputation:0 "我々の勤勉な外交官のおかげで、最近、我々の外交評判が向上した。"
- reduced_dip_reputation:0 "悪い評判"
+ reduced_dip_reputation:0 "悪評"
  desc_reduced_dip_reputation:0 "外交官の下品なおしゃべりは、我々の評判を台無しにしている。"
  ideagroups.606.t:0 "改善された評判"
  ideagroups.606.d:0 "昼夜を問わない外交官たちの努力によって、我々の評判は向上し、世界は我々を好意の目で眺めている。"
@@ -1546,7 +1546,7 @@
  EVTNAME7004:0 "文化の違い"
  EVTDESC7004:0 "悲惨なことに、我々の新しい君主のやり方は我々のように文明化されたものではない。しかし、彼の遅れた人々はこれに怒っているようだ。"
  EVTOPTA7004:0 "彼らはいくらか礼儀を学ぶべきだ！"
- EVTNAME7005:0 "我々の連合の悪い評判"
+ EVTNAME7005:0 "我が連合の悪評"
  EVTDESC7005:0 "我々の君主は、礼儀正しくそれを置くからといって、隣人として保持する最高の人物とはみなされていない。実際、その国の歴史は拡大と征服の歴史である。悲惨なことに、我々には同様の欠点があるようだ。"
  EVTOPTA7005:0 "実は、我々は同じではないのだ。"
  EVTOPTB7005:0 "我々は一つだ！"
@@ -2033,7 +2033,7 @@
  EVTNAME9610:0 "ルネサンスの衰退"
  EVTDESC9610:0 "我々の国が最近見た成長は、我々の資源と注意の両方を逸してしまったようだ。かつて知られていた教育改革と芸術的発展はそれに伴って苦しみ、ルネサンスの哲学を受け入れるという点で、我々はもはや先進国であると主張することはできない。"
  EVTOPTA9610:0 "非常に残念だ"
- EVTNAME750:0 "悪い評判！"
+ EVTNAME750:0 "悪評判！"
  EVTDESC750:0 "障害となるものを誰彼かまわず打ち破って新たな州を切り拓くというのが我々の最近の戦略だが、それは意外にも、我々の仲間である国家との間の立場にも多少の悪影響を及ぼしたようだ。"
  EVTOPTA750:0 "彼らはいつものように過剰反応している！"
  EVTNAME751:0 "インフレ"
